# erpnext_portugal_compliance

./: LICENSE  MANIFEST.in  NOTICE  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
